--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "author": "Sandip <sandipkurmi0@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/node": "^20.13.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.3.0",
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   }
 }
