--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.13.0",
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
@@ -22,5 +23,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
