--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.13.0",
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
@@ -25,6 +27,8 @@
     "typescript-eslint": "^7.11.0"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   }
 }
